--- a/config.yml
+++ b/config.yml
@@ -43,7 +43,7 @@
 
 # What is your status page called?
 # Shows up in the browser bar and meta tags
-title: Eggsample Status
+title: Internet Status
 
 # Should posts, which have a publish date
 # from the future, be built? Useful for
@@ -143,12 +143,10 @@ params:
   # For help, see the wiki:
   # https://github.com/cstate/cstate/wiki/Customization
   categories:
-    - name: North Coast
-      description: The main servers are located here.
-      closed: true
-    - name: Empty Category
-    - name: Uncategorized
-      untitled: true
+    - name: Oficina
+      description: Sitio Principal.
+    - name: Casa
+      description: Sitio Secundario.
 
   # These are your systems. Change them to
   # change the amount of components.
@@ -158,16 +156,18 @@ params:
   # For help, see the wiki:
   # https://github.com/cstate/cstate/wiki/Customization
   systems:
-    - name: Gateway
-      category: North Coast
-    - name: Backup Gateway
-      category: North Coast
-    - name: API
-      description: The guts of the application.
-      category: Uncategorized
-    - name: Media Proxy
-      description: This is the service responsible for serving images, audio, and video. It is reliant on our CDN.
-      category: Uncategorized
+    - name: CANTV
+      category: Oficina
+    - name: Satelital
+      category: Oficina
+    - name: Datos
+      category: Oficina
+    - name: CANTV
+      category: Casa
+    - name: Satelital
+      category: Casa
+    - name: Datos
+      category: Casa
 
   # What date format to use?
   #
@@ -288,7 +288,7 @@ params:
   # on the footer and meta tags.
   #
   # Default: We continuously monitor the status of our services and if there are any interruptions, a note will be posted here.
-  description: We continuously monitor the status of our services and if there are any interruptions, a note will be posted here.
+  description: Monitoreamos continuamente el estado de nuestros servicios y si hay alguna interrupción, se publicará una nota aquí.
 
   # Tabs on homepage
   # Uncomment to enable.
